expandiendo referencias